SERVER-1671 pair1.js failing