db/query.cpp
@@ -324,7 +324,6 @@ namespace mongo {
 
             while ( 1 ) {
                 if ( !c->ok() ) {
-//                    log() << "TEMP Tailable : " << c->tailable() << ' ' << (queryOptions & QueryOption_AwaitData) << endl;
                     if ( c->tailable() ) {
                         /* when a tailable cursor hits "EOF", ok() goes false, and current() is null.  however 
                            advance() can still be retries as a reactivation attempt.  when there is new data, it will 
